Fixed Post: Wrapping text description | Changed the static author name

--- a/frontend/static/css/post.css
+++ b/frontend/static/css/post.css
@@ -30,6 +30,9 @@
   line-height: 1.6;
   color: #444;
   margin-bottom: 14px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 /* ======================= POST IMAGE/VIDEO ======================= */
